# ctexgen

./: config.h.in  configure  configure.ac  makefile.am  makefile.in
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
cli/src/: cli.h  main.c
cli/src/argumentParser/: argumentParser.c  argumentParser.h
markov/include/: markov.h
markov/src/: markov.c
parser/include/: parser.h
parser/src/: parser.c
serializer/include/: serializer.h
serializer/src/: serializer.c
